--- a/index.html
+++ b/index.html
@@ -6,13 +6,79 @@
     <title>MS1-9ja Bites</title>
     <!--Bootstrap-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <!--CSS-->
-    <link rel="stylesheet" href="Assets/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="Assets/css/style.css">
     <!--Google Fonts-->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+<header>
+    <!--Navigation-->
+  
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  
+    <a href="index.html" class="navbar-brand"><img src="Assets/images/9logo.png" alt="logo" title="logo" class="rounded-pill"></a>
+    <button class="navbar-toggler" data-toggle="collapse" data-target="#collapse_target">
+      <span class="navbar-toggler-icon"></span>
+     </button>
+    <div class="collapse navbar-collapse" id="collapse_target">
+     <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+       <li class="nav-item active">
+         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+       </li>
+       <li class="nav-item">
+         <a class="nav-link" href="#">Menu</a>
+       </li>
+       <li class="nav-item">
+         <a class="nav-link" href="#">Contact Us</a>
+     </li>
+     </ul>
+  </div>
+  </nav>
+</header>
+<section>
+     <!--Jumbotron-->
+    <div class="jumbotron jumbotron-fluid"  style="background: url(Assets/images/ofada.jpg) no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover;">
+    <div class="container">
+    <h1 class="display-4">Welcome to 9ja Bites</h1>
+    <p class="lead">We are number one Nigerian restaurant in Ireland, serving best of Nigerian cuisines right in the heart of Dublin city since 2020.</p>
+    </div>
+   </div> 
+    <!--More about us-->
+    <div class="container">
+  <div class="row">
+    <div class="col-sm">
+      <h2>Dine in</h2>
+      <p>Enjoy good meal in an awesome ambience and relaxed environment that our top class restaurant offers right at the Dublin city center.</p>
+    </div>
+    <div class="col-sm">
+      <h2>Private Events</h2>
+      <p>We also cater for private events no matter the size, give us a call and we will make your event a memorable one.</p>
+    </div>
+    <div class="col-sm">
+      <h2>Live Music</h2>
+      <p>We have on stand a Nigerian music band of note every friday nite between 8 p.m and 2 a.m. to serenade you while you enjoy our sumptious meals.</p>
+    </div>
+  </div>
+</div>
+</section>
+<section>
+    <!--Menu/Gallery-->
+</section>   
+
+<section>
+    <!--Contact us/Book a table-->
+
+    <!--Address/Telephone/Social media links-->
+</section>   
+
+<footer>
+<!--Copyright info-->
+<p>Copyright 9ja Bites 2020.</p>
+</footer>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </body>
 </html>
