updated index.html with Font Awesome icons

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>MS1-9ja Bites</title>
     <!--Bootstrap-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <!--Font Awesome-->
+    <script src="https://kit.fontawesome.com/0fc87fc5fd.js" crossorigin="anonymous"></script>
     <!--CSS-->
     <link rel="stylesheet" type="text/css" href="Assets/css/style.css">
     <!--Google Fonts-->
@@ -46,17 +49,17 @@
    </div> 
     <!--More about us-->
     <div class="container">
-  <div class="row">
+    <div class="row">
     <div class="col-sm">
-      <h2>Dine in</h2>
+      <h3><i class="fas fa-utensils"></i> Dine in</h3>
       <p>Enjoy good meal in an awesome ambience and relaxed environment that our top class restaurant offers right at the Dublin city center.</p>
     </div>
     <div class="col-sm">
-      <h2>Private Events</h2>
+      <h3><i class="fas fa-glass-cheers"></i> Private Events</h3>
       <p>We also cater for private events no matter the size, give us a call and we will make your event a memorable one.</p>
     </div>
     <div class="col-sm">
-      <h2>Live Music</h2>
+      <h3><i class="fas fa-guitar"></i> Live Music</h3>
       <p>We have on stand a Nigerian music band of note every friday nite between 8 p.m and 2 a.m. to serenade you while you enjoy our sumptious meals.</p>
     </div>
   </div>
@@ -74,7 +77,7 @@
 
 <footer>
 <!--Copyright info-->
-<p>Copyright 9ja Bites 2020.</p>
+<p><i class="fas fa-copyright"></i> 9ja Bites 2020.</p>
 </footer>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
