--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
     <!--Font Awesome-->
     <script src="https://kit.fontawesome.com/0fc87fc5fd.js" crossorigin="anonymous"></script>
     <!--CSS-->
-    <link rel="stylesheet" type="text/css" href="Assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <!--Google Fonts-->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
+
 <body>
-<header>
+ <header>
     <!--Navigation-->
   
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
   
-    <a href="index.html" class="navbar-brand"><img src="Assets/images/9logo.png" alt="logo" title="logo" class="rounded-pill"></a>
+    <a href="index.html" class="navbar-brand"><img src="assets/images/9logo.png" alt="logo" title="logo" class="rounded-pill"></a>
     <button class="navbar-toggler" data-toggle="collapse" data-target="#collapse_target">
       <span class="navbar-toggler-icon"></span>
      </button>
@@ -39,7 +40,8 @@
   </div>
   </nav>
 </header>
-<section>
+
+<section id="home">
      <!--Jumbotron-->
     <div class="jumbotron jumbotron-fluid"  style="background: url(Assets/images/ofada.jpg) no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover;">
     <div class="container">
@@ -48,36 +50,55 @@
     </div>
    </div> 
     <!--More about us-->
-    <div class="container">
+    <div class="about container">
     <div class="row">
     <div class="col-sm">
-      <h3><i class="fas fa-utensils"></i> Dine in</h3>
+      <h3><i class="fas fa-utensils"></i>   Dine in</h3>
       <p>Enjoy good meal in an awesome ambience and relaxed environment that our top class restaurant offers right at the Dublin city center.</p>
     </div>
     <div class="col-sm">
-      <h3><i class="fas fa-glass-cheers"></i> Private Events</h3>
+      <h3><i class="fas fa-glass-cheers"></i>   Events</h3>
       <p>We also cater for private events no matter the size, give us a call and we will make your event a memorable one.</p>
     </div>
     <div class="col-sm">
-      <h3><i class="fas fa-guitar"></i> Live Music</h3>
+      <h3><i class="fas fa-guitar"></i>   Live Music</h3>
       <p>We have on stand a Nigerian music band of note every friday nite between 8 p.m and 2 a.m. to serenade you while you enjoy our sumptious meals.</p>
     </div>
   </div>
 </div>
 </section>
-<section>
+
+<section id="menu">
     <!--Menu/Gallery-->
+    <!--img src="/assets/images/amala.jpg">
+    <img src="/assets/images/eba.jpg">
+    <img src="/assets/images/Efo-Riro.jpg">
+    <img src="/assets/images/fried.rice.jpg">
+    <img src="/assets/images/isiewu.jpg">
+    <img src="/assets/images/jollof.jpg">
+    <img src="/assets/images/Iyan.jpg">
+    <img src="/assets/images/ofada.jpg">
+
 </section>   
 
-<section>
-    <!--Contact us/Book a table-->
+<section id="contact-us">
+    <!--Contact us/Book a table Form-->
 
-    <!--Address/Telephone/Social media links-->
+    <!--Address/Telephone/-->
 </section>   
 
 <footer>
+<!--Social Networks-->
+<ul class="social-networks">
+  <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
+  <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
+  <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
+  <li><a href="https://www.snapchat.com" target="_blank"><i class="fab fa-snapchat"></i></a></li>
+</ul>
+
 <!--Copyright info-->
 <p><i class="fas fa-copyright"></i> 9ja Bites 2020.</p>
+
 </footer>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
