updated jumbotron background image

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <section id="home">
      <!--Jumbotron-->
-    <div class="jumbotron jumbotron-fluid"  style="background: url(Assets/images/ofada.jpg) no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover;">
+    <div class="jumbotron jumbotron-fluid"  style="background: url(assets/images/ofada.jpg) no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover;">
     <div class="container">
     <h1 class="display-4">Welcome to 9ja Bites</h1>
     <p class="lead">We are number one Nigerian restaurant in Ireland, serving best of Nigerian cuisines right in the heart of Dublin city since 2020.</p>
