--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
 
 <body>
  <header>
+    <!--Top Bar-->
+  <div class="top-bar">
+    <div class="container">
+       <div class="col-12 text-right">
+          <p><a href="tel:+1555777"><i class="fas fa-phone-square-alt"></i> 01-555-9ja-Bites</a></p>
+       </div>
+    </div>
+  </div>
+
     <!--Navigation-->
   
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -45,8 +54,8 @@
      <!--Jumbotron-->
     <div class="jumbotron jumbotron-fluid"  style="background: url(assets/images/ofada.jpg) no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover;">
     <div class="container">
-    <h1 class="display-4">Welcome to 9ja Bites</h1>
-    <p class="lead">We are number one Nigerian restaurant in Ireland, serving best of Nigerian cuisines right in the heart of Dublin city since 2020.</p>
+    <h1 class="display-4">9ja Bites</h1>
+    <p class="lead">Best of Nigerian cuisines right in the heart of Dublin city since 2020.</p>
     </div>
    </div> 
     <!--More about us-->
