--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <!--Navigation-->
   
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg  navbar-light bg-light">
   
     <a href="index.html" class="navbar-brand"><img src="assets/images/9logo.png" alt="logo" title="logo" class="rounded-pill"></a>
     <button class="navbar-toggler" data-toggle="collapse" data-target="#collapse_target">
@@ -36,8 +36,8 @@
      </button>
     <div class="collapse navbar-collapse" id="collapse_target">
      <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-       <li class="nav-item active">
-         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+       <li class="nav-item ">
+         <a class="nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
        </li>
        <li class="nav-item">
          <a class="nav-link" href="#">Menu</a>
@@ -52,10 +52,10 @@
 
 <section id="home">
      <!--Jumbotron-->
-    <div class="jumbotron jumbotron-fluid"  style="background: url(assets/images/ofada.jpg) no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover;">
-    <div class="container">
-    <h1 class="display-4">9ja Bites</h1>
-    <p class="lead">Best of Nigerian cuisines right in the heart of Dublin city since 2020.</p>
+    <div class="jumbotron jumbotron-fluid ja-jumbo"> 
+     <div class="container">
+        <h1 class="display-4">9ja Bites</h1>
+         <h3 class="lead">Best of Nigerian cuisines right in the heart of Dublin city since 2020.</h3>
     </div>
    </div> 
     <!--More about us-->
