--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
          <a class="nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
        </li>
        <li class="nav-item">
-         <a class="nav-link" href="#">Menu</a>
+         <a class="nav-link" href="menu.html">Menu</a>
        </li>
        <li class="nav-item">
-         <a class="nav-link" href="#">Contact Us</a>
+         <a class="nav-link" href="contact.html">Contact Us</a>
      </li>
      </ul>
   </div>
@@ -76,25 +76,6 @@
   </div>
 </div>
 </section>
-
-<section id="menu">
-    <!--Menu/Gallery-->
-    <!--img src="/assets/images/amala.jpg">
-    <img src="/assets/images/eba.jpg">
-    <img src="/assets/images/Efo-Riro.jpg">
-    <img src="/assets/images/fried.rice.jpg">
-    <img src="/assets/images/isiewu.jpg">
-    <img src="/assets/images/jollof.jpg">
-    <img src="/assets/images/Iyan.jpg">
-    <img src="/assets/images/ofada.jpg">
-
-</section>   
-
-<section id="contact-us">
-    <!--Contact us/Book a table Form-->
-
-    <!--Address/Telephone/-->
-</section>   
 
 <footer>
 <!--Social Networks-->
