--- a/menu.html
+++ b/menu.html
@@ -36,7 +36,7 @@
     <div class="collapse navbar-collapse" id="collapse_target">
      <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
        <li class="nav-item ">
-         <a class="nav-link " href="index.html">Home</a>
+         <a class="nav-link" href="index.html">Home</a>
        </li>
        <li class="nav-item">
          <a class="nav-link active" href="menu.html">Menu <span class="sr-only">(current)</span></a>
@@ -48,6 +48,33 @@
   </div>
   </nav>
 </header>
+    <!--Menu/Gallery-->
+<section id="menu">
+  <div class="menu-item">
+    <img src="/assets/images/eba.jpg"><h6>Eba</h6>
+  </div>
+  <div class="menu-item">
+    <img src="/assets/images/amala.jpg"><h6>Amala</h6>
+  </div>
+  <div class="menu-item">
+    <img src="/assets/images/Efo-Riro.jpg"><h6>Efo</h6>
+  </div>
+  <div class="menu-item">
+    <img src="/assets/images/fried.rice.jpg"><h6>Fried Rice</h6>
+  </div>
+  <div class="menu-item">
+    <img src="/assets/images/isiewu.jpg"><h6>Isiewu</h6>
+  </div>
+  <div class="menu-item">
+    <img src="/assets/images/jollof.jpg"><h6>Jollof Rice</h6>
+  </div>
+  <div class="menu-item">
+    <img src="/assets/images/Iyan.jpg"><h6>Pounded Yam</h6>
+  </div>
+  <div class="menu-item">
+     <img src="/assets/images/ofada.jpg"><h6>Ofada Rice</h6>
+  </div>
+</section>
 
 
 <footer>
