--- a/contact.html
+++ b/contact.html
@@ -39,16 +39,42 @@
          <a class="nav-link " href="index.html">Home</a>
        </li>
        <li class="nav-item">
-         <a class="nav-link active" href="menu.html">Menu</a>
+         <a class="nav-link" href="menu.html">Menu</a>
        </li>
        <li class="nav-item">
-         <a class="nav-link active" href="contact.html">Contact Us <span class="sr-only">(current)</span></a>
+         <a class="nav-link active" href="contact.html">Contact Us<span class="sr-only">(current)</span></a>
      </li>
      </ul>
   </div>
   </nav>
 </header>
 
+<section id="contact-us">
+    <!--Address/Telephone-->
+    <div class="address">
+      <h4><i class="fas fa-map-marker-alt"></i> 9ja Bites</h4>
+        <p>1001 O'Connel Street,Dublin 1</p>
+    </div>
+    <div class="phone">
+       <p><a href="tel:+1555777"><i class="fas fa-phone-square-alt"></i> 01-555-9ja-Bites</a></p>
+    </div>
+
+    <!--Contact us/Book a table Form-->
+    <form>
+       <div class="contact-form">
+         <label for="name">Name</label>
+          <input type="text" class="form-order" id="name" placeholder="Name">
+         <label for="email">Email Address</label>
+          <input type="email" class="form-order" id="email" placeholder="Email Address">
+          <label for="booking-details">Reservation details</label>
+          <textarea class="form-order" id="booking-details" placeholder="Reservation summary"></textarea>
+          <div>
+            <button type="submit" class="submit-order">Submit</button>
+          </div>
+       </div>
+    </form>
+
+</section>  
 
 <footer>
 <!--Social Networks-->
