update styles for index and menu pages

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <!--Navigation-->
   
-  <nav class="navbar navbar-expand-lg  navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg  navbar-light">
   
     <a href="index.html" class="navbar-brand"><img src="assets/images/9logo.png" alt="logo" title="logo" class="rounded-pill"></a>
     <button class="navbar-toggler" data-toggle="collapse" data-target="#collapse_target">
@@ -55,7 +55,7 @@
     <div class="jumbotron jumbotron-fluid ja-jumbo"> 
      <div class="container">
         <h1 class="display-4">9ja Bites</h1>
-         <h3 class="lead">Best of Nigerian cuisines right in the heart of Dublin city since 2020.</h3>
+         <p class="lead">Best of Nigerian cuisines right in the heart of Dublin city since 2020.</p>
     </div>
    </div> 
     <!--More about us-->
