--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
 
     <!--Navigation-->
   
-  <nav class="navbar navbar-expand-lg  navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg  navbar-light">
   
     <a href="index.html" class="navbar-brand"><img src="assets/images/9logo.png" alt="logo" title="logo" class="rounded-pill"></a>
     <button class="navbar-toggler" data-toggle="collapse" data-target="#collapse_target">
