--- a/menu.html
+++ b/menu.html
@@ -54,6 +54,9 @@
     <img src="/assets/images/eba.jpg"><h6>Eba</h6>
   </div>
   <div class="menu-item">
+    <img src="/assets/images/bangaa.jpg"><h6>Banga Soup</h6>
+  </div>
+  <div class="menu-item">
     <img src="/assets/images/amala.jpg"><h6>Amala</h6>
   </div>
   <div class="menu-item">
@@ -63,7 +66,7 @@
     <img src="/assets/images/fried.rice.jpg"><h6>Fried Rice</h6>
   </div>
   <div class="menu-item">
-    <img src="/assets/images/isiewu.jpg"><h6>Isiewu</h6>
+    <img src="/assets/images/isiew.jpg"><h6>Isiewu</h6>
   </div>
   <div class="menu-item">
     <img src="/assets/images/jollof.jpg"><h6>Jollof Rice</h6>
@@ -72,7 +75,22 @@
     <img src="/assets/images/Iyan.jpg"><h6>Pounded Yam</h6>
   </div>
   <div class="menu-item">
+    <img src="/assets/images/moi-moi.jpg"><h6>Moi Moi</h6>
+  </div>
+  <div class="menu-item">
      <img src="/assets/images/ofada.jpg"><h6>Ofada Rice</h6>
+  </div>
+  <div class="menu-item">
+    <img src="/assets/images/asaro.jpg"><h6>Asaro</h6>
+  </div>
+  <div class="menu-item">
+     <img src="/assets/images/okro.jpg"><h6>Okro</h6>
+  </div>
+  <div class="menu-item">
+     <img src="/assets/images/egusi.jpg"><h6>Egusi</h6>
+  </div>
+  <div class="menu-item">
+     <img src="/assets/images/psoup.jpg"><h6>Pepper Soup</h6>
   </div>
 </section>
 
