--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </div>
     <div class="col-sm">
       <h3><i class="fas fa-guitar"></i>   Live Music</h3>
-      <p>We have on stand a Nigerian music band of note every friday nite between 8 p.m and 2 a.m. to serenade you while you enjoy our sumptious meals.</p>
+      <p>We have on stand a Nigerian music band of note every friday nite between 8 p.m and 2 a.m. to serenade you while you enjoy our sumptuous meals.</p>
     </div>
   </div>
 </div>
