indent codes in all pages

--- a/index.html
+++ b/index.html
@@ -1,98 +1,99 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>MS1-9ja Bites</title>
-    <!--Bootstrap-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <!--Font Awesome-->
-    <script src="https://kit.fontawesome.com/0fc87fc5fd.js" crossorigin="anonymous"></script>
-    <!--CSS-->
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <!--Google Fonts-->
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
-</head>
+        <!DOCTYPE html>
+        <html lang="en">
+        <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <meta http-equiv="X-UA-Compatible" content="ie=edge">
+            <title>MS1-9ja Bites</title>
+            <!--Bootstrap-->
+            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+            <!--Font Awesome-->
+            <script src="https://kit.fontawesome.com/0fc87fc5fd.js" crossorigin="anonymous"></script>
+            <!--CSS-->
+            <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+            <!--Google Fonts-->
+            <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
+        </head>
 
-<body>
- <header>
-    <!--Top Bar-->
-  <div class="top-bar">
-    <div class="container">
-       <div class="col-12 text-right">
-          <p><a href="tel:+1555777"><i class="fas fa-phone-square-alt"></i> 01-555-9ja-Bites</a></p>
-       </div>
-    </div>
-  </div>
+        <body>
+        <header>
+            <!--Top Bar-->
+        <div class="top-bar">
+            <div class="container">
+            <div class="col-12 text-right">
+                <p><a href="tel:+1555777"><i class="fas fa-phone-square-alt"></i> 01-555-9ja-Bites</a></p>
+            </div>
+            </div>
+        </div>
 
-    <!--Navigation-->
-  
-  <nav class="navbar navbar-expand-lg  navbar-light">
-  
-    <a href="index.html" class="navbar-brand"><img src="assets/images/9logo.png" alt="logo" title="logo" class="rounded-pill"></a>
-    <button class="navbar-toggler" data-toggle="collapse" data-target="#collapse_target">
-      <span class="navbar-toggler-icon"></span>
-     </button>
-    <div class="collapse navbar-collapse" id="collapse_target">
-     <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-       <li class="nav-item ">
-         <a class="nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
-       </li>
-       <li class="nav-item">
-         <a class="nav-link" href="menu.html">Menu</a>
-       </li>
-       <li class="nav-item">
-         <a class="nav-link" href="contact.html">Contact Us</a>
-     </li>
-     </ul>
-  </div>
-  </nav>
-</header>
+            <!--Navigation-->
+        
+        <nav class="navbar navbar-expand-lg  navbar-light">
+        
+            <a href="index.html" class="navbar-brand"><img src="assets/images/9logo.png" alt="logo" title="logo" class="rounded-pill"></a>
+            <button class="navbar-toggler" data-toggle="collapse" data-target="#collapse_target" aria-label="justify">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="collapse_target">
+                <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+                <li class="nav-item ">
+                    <a class="nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="menu.html">Menu</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact Us</a>
+                </li>
+            </ul>
+            </div>
+        </nav>
+        </header>
 
-<section id="home">
-     <!--Jumbotron-->
-    <div class="jumbotron jumbotron-fluid ja-jumbo"> 
-     <div class="container">
-        <h1 class="display-4">9ja Bites</h1>
-         <p class="lead">Best of Nigerian cuisines right in the heart of Dublin city since 2020.</p>
-    </div>
-   </div> 
-    <!--More about us-->
-    <div class="about container">
-    <div class="row">
-    <div class="col-sm">
-      <h3><i class="fas fa-utensils"></i>   Dine in</h3>
-      <p>Enjoy good meal in an awesome ambience and relaxed environment that our top class restaurant offers right at the Dublin city center.</p>
-    </div>
-    <div class="col-sm">
-      <h3><i class="fas fa-glass-cheers"></i>   Events</h3>
-      <p>We also cater for private events no matter the size, give us a call and we will make your event a memorable one.</p>
-    </div>
-    <div class="col-sm">
-      <h3><i class="fas fa-guitar"></i>   Live Music</h3>
-      <p>We have on stand a Nigerian music band of note every friday nite between 8 p.m and 2 a.m. to serenade you while you enjoy our sumptuous meals.</p>
-    </div>
-  </div>
-</div>
-</section>
+        <section id="home">
+            <!--Jumbotron-->
+            <div class="jumbotron jumbotron-fluid home-jumbo"> 
+            <div class="container">
+                <h1 class="display-4">9ja Bites</h1>
+                <p class="lead">Best of Nigerian cuisines right in the heart of Dublin city since 2020.</p>
+            </div>
+        </div> 
 
-<footer>
-<!--Social Networks-->
-<ul class="social-networks">
-  <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
-  <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
-  <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
-  <li><a href="https://www.snapchat.com" target="_blank"><i class="fab fa-snapchat"></i></a></li>
-</ul>
+            <!--More about us-->
+            <div class="about container">
+            <div class="row">
+                <div class="col-sm">
+                    <h2><i class="fas fa-utensils"></i>   Dine in</h2>
+                    <p>Enjoy good meal in an awesome ambience and relaxed environment that our top class restaurant offers right at the Dublin city center.</p>
+                </div>
+                <div class="col-sm">
+                    <h2><i class="fas fa-glass-cheers"></i>   Events</h2>
+                    <p>We also cater for private events no matter the size, give us a call and we will make your event a memorable one.</p>
+            </div>
+                <div class="col-sm">
+                    <h2><i class="fas fa-guitar"></i>   Live Music</h2>
+                    <p>We have on stand a Nigerian music band of note every friday nite between 8 p.m and 2 a.m. to serenade you while you enjoy our sumptuous meals.</p>
+            </div>
+            </div>
+            </div>
+        </section>
 
-<!--Copyright info-->
-<p><i class="fas fa-copyright"></i> 9ja Bites 2020.</p>
+        <footer>
+        <!--Social Networks-->
+        <ul class="social-networks">
+        <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
+        <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
+        <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
+        <li><a href="https://www.snapchat.com" target="_blank"><i class="fab fa-snapchat"></i></a></li>
+        </ul>
 
-</footer>
+        <!--Copyright info-->
+        <p><i class="fas fa-copyright"></i> 9ja Bites 2020.</p>
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-</body>
-</html>
+        </footer>
+
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+        </body>
+        </html>
