took out forward slash from menu-item to load in url

--- a/menu.html
+++ b/menu.html
@@ -50,20 +50,20 @@
         <!--Menu/Gallery-->
     <section id="menu">
     <div class="menu-item">
-        <img src="/assets/images/eba-min.jpg"><h6>Eba</h6>
-        <img src="/assets/images/bangaa-min.jpg"><h6>Banga Soup</h6>
-        <img src="/assets/images/amala-min.jpg"><h6>Amala</h6>
-        <img src="/assets/images/Efo-Riro-min.jpg"><h6>Efo</h6>
-        <img src="/assets/images/fried.rice-min.jpg"><h6>Fried Rice</h6>
-        <img src="/assets/images/isiew-min.jpg"><h6>Isiewu</h6>
-        <img src="/assets/images/jollof-min.jpg"><h6>Jollof Rice</h6>
-        <img src="/assets/images/Iyan-min.jpg"><h6>Pounded Yam</h6>
-        <img src="/assets/images/moi-moi-min.jpg"><h6>Moi Moi</h6>
-        <img src="/assets/images/ofada-min.jpg"><h6>Ofada Rice</h6>
-        <img src="/assets/images/asaro-min.jpg"><h6>Asaro</h6>
-        <img src="/assets/images/okro-min.jpg"><h6>Okro</h6>
-        <img src="/assets/images/egusi-min.jpg"><h6>Egusi</h6>
-        <img src="/assets/images/pepper soup-min.jpg"><h6>Pepper Soup</h6>
+        <img src="assets/images/eba-min.jpg"><h6>Eba</h6>
+        <img src="assets/images/bangaa-min.jpg"><h6>Banga Soup</h6>
+        <img src="assets/images/amala-min.jpg"><h6>Amala</h6>
+        <img src="assets/images/Efo-Riro-min.jpg"><h6>Efo</h6>
+        <img src="assets/images/fried.rice-min.jpg"><h6>Fried Rice</h6>
+        <img src="assets/images/isiew-min.jpg"><h6>Isiewu</h6>
+        <img src="assets/images/jollof-min.jpg"><h6>Jollof Rice</h6>
+        <img src="assets/images/Iyan-min.jpg"><h6>Pounded Yam</h6>
+        <img src="assets/images/moi-moi-min.jpg"><h6>Moi Moi</h6>
+        <img src="assets/images/ofada-min.jpg"><h6>Ofada Rice</h6>
+        <img src="assets/images/asaro-min.jpg"><h6>Asaro</h6>
+        <img src="assets/images/okro-min.jpg"><h6>Okro</h6>
+        <img src="assets/images/egusi-min.jpg"><h6>Egusi</h6>
+        <img src="assets/images/pepper soup-min.jpg"><h6>Pepper Soup</h6>
     </div>
     </section>
 
