added alt attribute to img

--- a/menu.html
+++ b/menu.html
@@ -50,20 +50,20 @@
         <!--Menu/Gallery-->
     <section id="menu">
     <div class="menu-item">
-        <img src="assets/images/eba-min.jpg"><p>Eba</p>
-        <img src="assets/images/bangaa-min.jpg"><p>Banga Soup</p>
-        <img src="assets/images/amala-min.jpg"><p>Amala</p>
-        <img src="assets/images/Efo-Riro-min.jpg"><p>Efo</p>
-        <img src="assets/images/fried.rice-min.jpg"><p>Fried Rice</p>
-        <img src="assets/images/isiew-min.jpg"><p>Isiewu</p>
-        <img src="assets/images/jollof-min.jpg"><p>Jollof Rice</p>
-        <img src="assets/images/Iyan-min.jpg"><p>Pounded Yam</p>
-        <img src="assets/images/moi-moi-min.jpg"><p>Moi Moi</p>
-        <img src="assets/images/ofada-min.jpg"><p>Ofada Rice</p>
-        <img src="assets/images/asaro-min.jpg"><p>Asaro</p>
-        <img src="assets/images/okro-min.jpg"><p>Okro</p>
-        <img src="assets/images/egusi-min.jpg"><p>Egusi</p>
-        <img src="assets/images/pepper soup-min.jpg"><p>Pepper Soup</p>
+        <img src="assets/images/eba-min.jpg" alt="eba"><p>Eba</p>
+        <img src="assets/images/bangaa-min.jpg" alt="banga"><p>Banga Soup</p>
+        <img src="assets/images/amala-min.jpg" alt="amala"><p>Amala</p>
+        <img src="assets/images/Efo-Riro-min.jpg" alt="efo"><p>Efo</p>
+        <img src="assets/images/fried.rice-min.jpg" alt="fried-rice"><p>Fried Rice</p>
+        <img src="assets/images/isiew-min.jpg" alt="isiewu"><p>Isiewu</p>
+        <img src="assets/images/jollof-min.jpg" alt="jollof"><p>Jollof Rice</p>
+        <img src="assets/images/Iyan-min.jpg" alt="pounded-yam"><p>Pounded Yam</p>
+        <img src="assets/images/moi-moi-min.jpg" alt="moi-moi"><p>Moi Moi</p>
+        <img src="assets/images/ofada-min.jpg" alt="ofada"><p>Ofada Rice</p>
+        <img src="assets/images/asaro-min.jpg" alt="asaro"><p>Asaro</p>
+        <img src="assets/images/okro-min.jpg" alt="okro"><p>Okro</p>
+        <img src="assets/images/egusi-min.jpg" alt="egusi"><p>Egusi</p>
+        <img src="assets/images/pepper-soup-min.jpg" alt="pepper-soup"><p>Pepper Soup</p>
     </div>
     </section>
 
