changed jumbotron-fluid to img-fluid

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         <section id="home">
             <!--Jumbotron-->
-            <div class="jumbotron jumbotron-fluid home-jumbo"> 
+            <div class="jumbotron img-fluid home-jumbo"> 
             <div class="container">
                 <h1 class="display-4">9ja Bites</h1>
                 <p class="lead">Best of Nigerian cuisines right in the heart of Dublin city since 2020.</p>
