updated contact number

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
     <div class="top-bar">
         <div class="container">
         <div class="col-12 text-right">
-            <p><a href="tel:+1555777"><i class="fas fa-phone-square-alt"></i> 01-555-9ja-Bites</a></p>
+            <p><a href="tel:+1555777"><i class="fas fa-phone-square-alt"></i> 01-555-777</a></p>
         </div>
         </div>
     </div>
