updated phone number

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
     <div class="top-bar">
         <div class="container">
         <div class="col-12 text-right">
-            <p><a href="tel:+1555777"><i class="fas fa-phone-square-alt"></i> 01-555-777</a></p>
+            <p><a href="tel:+1555777"><i class="fas fa-phone-square-alt"></i> 01-555-9ja-Bites</a></p>
         </div>
         </div>
     </div>
@@ -56,7 +56,7 @@
             <p><a href="https://goo.gl/maps/sp3kUwGTc3SVobno9" target="_blank"><i class="fas fa-map-marker-alt"></i></a> 1001 O'Connel Street,Dublin 1</p>
         </div>
         <div class="phone">
-        <p><a href="tel:+1555777"><i class="fas fa-phone-square-alt"></i> 01-555-9ja-Bites</a></p>
+        <p><a href="tel:+1555777"><i class="fas fa-phone-square-alt"></i> 01-555777</a></p>
         </div>
 
         <!--Contact us/Book a table Form-->
